@@ -25,9 +25,6 @@ TODO:
 
 * Version 0.2.0
     
-    * Fix problems with NullPointerExceptions coming from JTree trying to start
-      editing when doing a drag operation.
-    
     * Fix problems with the JTree not expanding nodes when other nodes are added
       via drag n drop.
     
