@@ -32,7 +32,7 @@
     
     <property name="major.version" value="0"/>
     <property name="minor.version" value="1"/>
-    <property name="build.version" value="66"/>
+    <property name="build.version" value="67"/>
     <property name="app.version" value="${major.version}.${minor.version}.${build.version}"/>
     <property name="app_version" value="${major.version}_${minor.version}_${build.version}"/>
     
