@@ -64,7 +64,6 @@ public class FileNewAction extends AbstractAction {
     
     public FileNewAction(TabbedView parent) {//{{{
         putValue(Action.NAME, "New");
-        putValue(Action.SHORT_DESCRIPTION, "Create a New XML Document");
         putValue(Action.ACCELERATOR_KEY,KeyStroke.getKeyStroke("ctrl N"));
         putValue(Action.MNEMONIC_KEY, new Integer(KeyStroke.getKeyStroke("N").getKeyCode()));
         view = parent;
